--- a/.gitignore
+++ b/.gitignore
@@ -104,10 +104,8 @@ venv.bak/
 .mypy_cache/
 
 # user added files and directories
-.idea/codeStyles/codeStyleConfig.xml
-.idea/vcs.xml
-.idea/depmap_analysis.iml
-.idea/misc.xml
-.idea/modules.xml
-.idea/workspace.xml
+.idea/
+*.csv
+correlations.h5
+pure_ceres_scores.dat
 
