--- a/.gitignore
+++ b/.gitignore
@@ -103,13 +103,8 @@ venv.bak/
 # mypy
 .mypy_cache/
 
-# user added files and directories
-.idea/
-JS/test_html
-depmap_web_explainer/dev/
-input_data/
-output_data/
-test_dir/
+# user added files
+.swp
 networkx_testing.py
 *.csv
 *.csv#
@@ -119,4 +114,12 @@ dep_map_script_log*
 *.tex
 *.ps
 *.png
+
+# user added directories
+.idea/
+JS/test_html
+depmap_web_explainer/dev/
+input_data/
+output_data/
+test_dir/
 
