--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+notebooks/*.h5
+notebooks/*.json
+notebooks/*.pkl
+notebooks/*.ai
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
